# university

./: README.md
algebra/: README.md
course_1/algebra/: README.md
course_1/algebra/lectures/: README.md  youtube.txt
course_1/algebra/lectures/01/: youtube.txt
course_1/algebra/lectures/02/: description.txt
course_1/algebra/lectures/03/: description.txt
course_1/algebra/lectures/05/: description.txt
course_1/algebra/lectures/06/: description.txt
course_1/algebra/lectures/07/: description.txt  youtube.txt
course_1/algebra/lectures/08/: youtube.txt
course_1/algebra/lectures/09/: description.txt
course_1/algebra/lectures/1/: description.txt
course_1/algebra/lectures/10/: description.txt
course_1/algebra/lectures/2/: youtube.txt
course_1/algebra/lectures/3/: youtube.txt
course_1/algebra/lectures/4/: description.txt  youtube.txt
course_1/algebra/lectures/5/: youtube.txt
course_1/algebra/lectures/8/: description.txt
course_1/algebra/lectures/9/: youtube.txt
course_1/linear_algebra/lectures/: README.md
course_1/summer_practice/: CMakeLists.txt  main.cpp  scope_guard.h  testing.cpp
course_2/caos/contest/: sm00-1.c  sm02-1.c  sm02-2.c  sm02-3.c  sm02-4.c  sm03-1.c  sm03-2.c  sm03-3.c  sm03-4.c  sm03-5.c
